Improve mobile version
Signed-off-by: Ruben Araujo (CTW) <Ruben.Araujo@ctw.bmwgroup.com>

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                                 <div class="panel-body">
 									<div class="row">
                                         <div class="col-lg-12">
+                                            Como funciona?<br><br>
 											- Investimento inicial: montante que vais investir num primeiro momento.<br>
 											- Duração: tempo em anos que durará o investimento.<br>
 											- Reforço: montante que pretendes adicionar e a periodicidade.<br>
@@ -85,6 +86,12 @@
                     <h3>Other Tab Content</h3>
                     <p>Content for the other tab goes here.</p>
                 </div>-->
+            </div>
+            <br>
+            <div class="footer">
+                <small>
+                    developed by Ruben Araujo
+                </small>
             </div>
         </div>	
     <!--/ Container -->
