--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                                 <div class="panel-body">
 									<div class="row">
                                         <div class="col-lg-12">
-                                            Como funciona?<br><br>
 											- Investimento inicial: montante que vais investir num primeiro momento.<br>
 											- Duração: tempo em anos que durará o investimento.<br>
 											- Reforço: montante que pretendes adicionar e a periodicidade.<br>
 											- Taxa de juro anual (TANB): a taxa que esperas ganhar com o teu investimento.<br>
+                                            - Os juros são compostos: a periodicidade com que os juros são calculados.<br>
 											<br>
                                         </div>
                                     </div>
@@ -64,6 +64,18 @@
                                             <label for="interest">Taxa de juro anual (TANB)
                                             <br>
                                             <input type="text" value="4%"  name="interest" size="4" id="interest-rate-amount" maxlength="3" class="savings-form">
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <label for="compounding-frequency">Os juros são compostos
+                                            <br>
+                                            <select id="compounding-frequency">
+                                                <option value="12">Mensal</option>
+                                                <option value="4">Trimestral</option>
+                                                <option value="2">Semestral</option>
+                                                <option value="1">Anual</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
