--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="container">
             <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#compound-interest">Calculadora de juros compostos</a></li>
+                <li class="active"><a data-toggle="tab" href="#compound-interest">Juros compostos</a></li>
                 <!-- <li><a data-toggle="tab" href="#other-tab">Other Tab</a></li> -->
             </ul>
 
@@ -63,7 +63,7 @@
                                         <div class="col-lg-12">
                                             <label for="interest">Taxa de juro anual (TANB)
                                             <br>
-                                            <input type="text" value="4%"  name="interest" size="4" id="interest-rate-amount" maxlength="3" class="savings-form">
+                                            <input type="text" value="4%"  name="interest" size="5" id="interest-rate-amount" maxlength="5" class="savings-form">
                                         </div>
                                     </div>
                                     <div class="row">
@@ -99,7 +99,7 @@
                     <p>Content for the other tab goes here.</p>
                 </div>-->
             </div>
-            <br>
+            <br><br><br><br><br><br>
             <div class="footer">
                 <small>
                     developed by Ruben Araujo
