--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#compound-interest">Juros compostos</a></li>
-                <!-- <li><a data-toggle="tab" href="#other-tab">Other Tab</a></li> -->
+                <li><a data-toggle="tab" href="#payoff">Amortização</a></li>
             </ul>
 
             <div class="tab-content">
@@ -51,7 +51,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-12">
-                                            <label for="contributions"> Reforço
+                                            <label for="contributions"> Reforço de 
                                             <input type="text" value="100" name="contributions" size="8" id="contributions-amount" maxlength="7" class="savings-form">
                                             <select id="contribution-rate" class="savings-form">
                                                 <option value="12">Mensal</option>
@@ -71,10 +71,10 @@
                                             <label for="compounding-frequency">Os juros são compostos
                                             <br>
                                             <select id="compounding-frequency">
-                                                <option value="12">Mensal</option>
-                                                <option value="4">Trimestral</option>
-                                                <option value="2">Semestral</option>
-                                                <option value="1">Anual</option>
+                                                <option value="12">Mensalmente</option>
+                                                <option value="4">Trimestralmente</option>
+                                                <option value="2">Semestralmente</option>
+                                                <option value="1">Anualmente</option>
                                             </select>
                                         </div>
                                     </div>
@@ -94,10 +94,9 @@
                         </div>
                     </div>
                 </div>
-                <!--/<div id="other-tab" class="tab-pane fade">
-                    <h3>Other Tab Content</h3>
-                    <p>Content for the other tab goes here.</p>
-                </div>-->
+                <div id="payoff" class="tab-pane fade">
+                    <h3>WORK IN PROGRESS</h3>
+                </div>
             </div>
             <br><br><br><br><br><br>
             <div class="footer">
