Increase fonts on mobile
Signed-off-by: Ruben Araujo (CTW) <Ruben.Araujo@ctw.bmwgroup.com>

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <ul class="nav nav-tabs">
             <li class="active"><a data-toggle="tab" href="#compound-interest"><i
                         class="fas fa-chart-line"></i>&nbsp;&nbsp;Juros compostos</a></li>
-            <li><a id="payoff-tab" data-toggle="tab" href="#payoff"><i class="fas fa-piggy-bank"></i>&nbsp;&nbsp;Amortização</a></li>
+            <li><a id="payoff-tab" data-toggle="tab" href="#payoff"><i
+                        class="fas fa-piggy-bank"></i>&nbsp;&nbsp;Amortização</a></li>
         </ul>
 
         <div class="tab-content">
@@ -207,7 +208,8 @@
                                                 <input type="text" value="1%" name="spread" size="5" id="spread"
                                                     maxlength="3" required="">
                                             </div>
-                                            <button id="calculate-button" class="form-submit-btn" type="button">Calcular</button>
+                                            <button id="calculate-button" class="form-submit-btn"
+                                                type="button">Calcular</button>
                                         </form>
                                     </div>
                                 </div>
@@ -220,17 +222,18 @@
                             <div class="result-card">
                                 <p id="savings-amount" class="savings"></p>
                                 <p id="info" class="info"></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <br><br><br><br><br><br>
+    </div>
         <div class="footer">
             <small>
                 developed by Ruben Araujo
             </small>
         </div>
-    </div>
     <!--/ Container -->
 </body>
 
